--- a/index.css
+++ b/index.css
@@ -1,9 +1,3 @@
-.container{
-    position: absolute;
-    left: 40%;
-}
-
-
 /* Popup container */
 .popup {
     position: relative;
@@ -56,3 +50,77 @@
     from {opacity: 0;}
     to {opacity:1 ;}
   }
+
+
+/* ------------------------------ */
+body{
+  background-color: rgb(141, 213, 235);
+}
+
+.container {
+  position:absolute;
+  padding: 16px;
+  left:25%;
+}
+
+input[type=text], input[type=password] {
+  width:200%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #d8bbbb;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color:rgb(194, 243, 57);
+  outline: none;
+}
+
+.donebtn {
+  background-color: #04AA6D;
+  color:black;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 40%;
+  opacity: 0.9;
+}
+
+.cancelbtn {
+  background-color:#aa8304;
+  color:black;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 40%;
+  opacity: 0.9;
+}
+
+.donebtn:hover{
+  background-color: green;
+}
+.cancelbtn:hover{
+  background-color: red;
+}
+
+.floated{
+  float:left;
+}
+
+.changebtn{
+  background-color:#02ff39;
+  color:black;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.changebtn:hover{
+  opacity: 1.2;
+}
