--- a/views/MentorRegistration.html
+++ b/views/MentorRegistration.html
@@ -4,6 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         h1,h2,h3{
             text-align: center;
@@ -38,14 +43,14 @@
 <div class="container">
     <form action="submit">
         <div class="general">
-            <div class = "form_group">
-                <label>Full Name :</label>
-                <br>
-                <input type = "text" name = "fname" value = "" required/>
-                <br>
+            <div class = "form-group row">
+                <label  class="col-sm-2 col-form-label">Full Name :</label>
+                <div class="col-sm-10">
+                    <input type = "text" class = "form-control" name = "fname" value = "" required/>
+                </div>
             </div>
             <br>
-            <div class = "form_group">
+            <div class = "form-group row">
                 <label>Email :</label>
                 <br>
                 <input type = "text" name = "email" value = "" required/>
